--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>Filipe de Souza.</h1>
-        <h2>a <span class="data">data scientist.</span></h2>
+        <h2>a <span class="data">data analyst.</span></h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img class="mountain" src="images/mountains.png" alt="mountain-img">
     </div>
@@ -24,7 +24,7 @@
   <div class="profile">
     <img id="profile-picture" src="images/filipe.png" alt="profile-picture">
     <h2>Hello.</h2>
-    <p class="intro">My name is Filipe de Souza.<br>I am a Data Scientist, Data Analyst and Personal Trainer.<br>My goal is to find solutions with Artificial Intelligence and Machine Learning for the health and fitness industry.</p>
+    <p class="intro">My name is Filipe de Souza.<br>I am a Data Analyst and Personal Trainer.<br>My goal is to find solutions with Artificial Intelligence and Machine Learning for the health and fitness industry.</p>
   </div>
   <hr>
   <div class="skills">
@@ -33,14 +33,14 @@
       <img class="data-science" src="https://media0.giphy.com/media/n6mEMqAuYOQ8l8qcEE/giphy.gif?cid=790b76115f0369a7924130bfae769cf7a9b6a03d64ce59ce&rid=giphy.gif&ct=g" alt="Data Science">
       <br>
       <h3>Data Science</h3>
-      <p>Scikit-learn, TensorFlow, Keras, OpenCV, Scipy, Google Cloud Platform, ML Flow, Flask, Heroku and Streamlit.</p>
+      <p>Python, Scikit-learn, TensorFlow, Keras, OpenCV, Scipy, Google Cloud Platform, ML Flow, Flask, Heroku and Streamlit.</p>
     </div>
 
     <div class="skill-row">
       <img class="data-analysis" src="https://media4.giphy.com/media/J4qfGGPz5YA8zEKBDM/giphy.gif?cid=ecf05e470x3554tr9dpsry1q8bcsi7et7xrwj3zirnwun9a3&rid=giphy.gif&ct=s" alt="Data Analysis">
       <br>
       <h3>Data Analytics</h3>
-      <p>SQL, BigQuery, Pandas, Numpy, Matplotlib, Scipy, Seaborn, Statsmodels and Tableau.</p>
+      <p>Python, SQL, BigQuery, Pandas, Numpy, Matplotlib, Scipy, Seaborn, Statsmodels and Tableau.</p>
     </div>
 
     <div class="skill-row">
@@ -55,7 +55,7 @@
   <div class="contact-me">
     <h2>Contact Me</h2>
     <h3></h3>
-    <p class="contact-message">Click in the button bellow to email me.<br>For my LinkedIn, GitHub or Personal Training click on the logos related.</p>
+    <!-- <p class="contact-message">Click in the button bellow to email me.<br>For my LinkedIn, GitHub or Personal Training click on the logos related.</p> -->
     <a class="btn" href="mailto:filipecasa@gmail.com">CONTACT ME</a>
   </div>
 </div>
@@ -65,7 +65,7 @@
   <a class="footer-link" href="https://www.linkedin.com/filipedesouzade"><img class="logo" src="images/linkedin.png" alt="LinkedIn"></a>
   <a class="footer-link" href="https://github.com/filipecasa?tab=repositories"><img  class="logo" src="images/github.png" alt="GitHub"></a>
   <a class="footer-link" href="https://www.filipedesouza.de"><img id="logo-trainer" src="images/logo_filipe.png" alt="Personal Trainer" ></a>
-  <p class="copyright">© 2021 Filipe de Souza.</p>
+  <p class="copyright">© 2022 Filipe de Souza.</p>
 </div>
 
 </body>
